/stats/uptime
